# release-radar

./: BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
cmd/release-radar/: BUILD.bazel  main.go
pkg/producer/: BUILD.bazel  database.go  github_release_producer.go  producer.go  release.go  release_test.go  version_parser.go  version_parser_test.go
